--- a/ETAD.ipynb
+++ b/ETAD.ipynb
@@ -170,7 +170,7 @@
     "    assert len(search_results) == 1, \"error. more than one ETAD product found for scene\"\n",
     "    prod_id = search_results[0]['Id']\n",
     "    prod_name = search_results[0]['Name']\n",
-    "    etad_filename = prod_name + '.zip'\n",
+    "    etad_filename = prod_name + '.zip' # {prod_name}.SAFE.zip\n",
     "    \n",
     "    # get a token from copernicus hub to enable download\n",
     "    data = {\n",
@@ -201,7 +201,7 @@
     "        print(f'ETAD already downloaded')\n",
     "\n",
     "    if unzip:\n",
-    "        etad_safe = etad_path.replace('.zip', '')\n",
+    "        etad_safe = etad_path.replace('.zip', '') # remove .zip leaving .SAFE\n",
     "        print(f'Unzipping to : {etad_safe}')\n",
     "        if not os.path.isdir(etad_safe):\n",
     "            archive = zipfile.ZipFile(etad_path, 'r')\n",
