fixing to search by timerange

--- a/ETAD.ipynb
+++ b/ETAD.ipynb
@@ -20,7 +20,7 @@
     "import tarfile\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime, timedelta\n",
     "import requests\n",
     "import asf_search as asf\n",
     "from scipy import constants\n",
@@ -159,15 +159,23 @@
     "    \"\"\"\n",
     "\n",
     "    sat, mode, prod,_, pol, start, finish = scene.split('_')[:7]\n",
+    "    second_pad = 2\n",
+    "    start_dt = datetime.strptime(start, \"%Y%m%dT%H%M%S\")\n",
+    "    start_dt_1 = start_dt - timedelta(seconds=second_pad)\n",
+    "    start_dt_2 = start_dt + timedelta(seconds=second_pad)\n",
+    "    start_dt_1 = start_dt_1.strftime(\"%Y-%m-%dT%H:%M:%S.000Z\")\n",
+    "    start_dt_2 = start_dt_2.strftime(\"%Y-%m-%dT%H:%M:%S.000Z\")\n",
     "\n",
     "    print(f'Searching Copernicus Dataspace for ETAD file...')\n",
-    "    # find the ETAD using the start and end timestamps from the SLC\n",
+    "    # find the ETAD using the start timestamps from the SLC\n",
     "    search_results = requests.get(\n",
-    "        f\"https://catalogue.dataspace.copernicus.eu/odata/v1/Products?$filter=contains(Name,'ETA') and contains(Name,'{start}') and contains(Name,'{finish}')&$orderby=ContentDate/Start&$top=100\"\n",
-    "        ).json()['value']\n",
+    "    f\"https://catalogue.dataspace.copernicus.eu/odata/v1/Products?\"\n",
+    "    f\"$filter=ContentDate/Start ge {start_dt_1} and ContentDate/Start le {start_dt_2} and contains(Name,'ETA')\"\n",
+    "    f\"&$orderby=ContentDate/Start&$top=100\"\n",
+    "    ).json()['value']\n",
     "    files = [res['Name'] for res in search_results]\n",
     "    print(f'ETAD files found {files}')\n",
-    "    assert len(search_results) == 1, \"error. more than one ETAD product found for scene\"\n",
+    "    assert len(search_results) == 1, f\"error. expected 1 ETAD file, found {len(search_results)}\"\n",
     "    prod_id = search_results[0]['Id']\n",
     "    prod_name = search_results[0]['Name']\n",
     "    etad_filename = prod_name + '.zip' # {prod_name}.SAFE.zip\n",
